# mashi

./: .env.example  .gitignore  AGENTS.md  AGENT_IMPROVEMENT_FINDINGS.md  CLAUDE.md  DEPLOY.md  FEEL_PARITY_REVIEW.md  INVESTIGATION.md  MASHI_AGENT_BUILDOUT.md  MASHI_AGENT_QUALITY.md  MASHI_FOCUS_CARD_BUILDOUT.md  MASHI_SPRINT_CONTROLS_BUILDOUT.md  MULTITENANCY_AUDIT.md  MULTITENANCY_REMEDIATION.md  SPRINT_FOCUS_REDESIGN.md  eslint.config.mjs  mashi-0.1.1.dxt  mashi-0.1.2.dxt  mashi-0.1.3.dxt  mashi.dxt  next.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vercel.json
.github/workflows/: build-mac-helper.yml  ci.yml  migrate.yml
apps/mac-helper/src-tauri/: Cargo.toml  tauri.conf.json
apps/mac-helper/src-tauri/capabilities/: default.json
apps/mac-helper/src-tauri/icons/: README.md
apps/mac-helper/src-tauri/src/: heartbeat.rs  ignore.rs  keychain.rs  lib.rs  main.rs  pause.rs  poll.rs
docs/: LAYOUT_SMOKE_TEST.md  prd-laptop-activity-watcher.md
dxt/: build.mjs  bundle.mjs  manifest.json  package.json  pnpm-lock.yaml  tsconfig.json
dxt/src/: server.ts
scripts/: audit-layers.sh  audit-motion.sh  audit-translucency.sh  backfill-source-urls.ts  check-sync.mjs  dry-run-past-cal-events.ts  dry-run-prep-past.ts  embed-tools.ts  migrate-sidd-to-prod.mjs  post-domain-setup.sh  run-bundle.ts  run-consolidate.ts  run-reconcile.ts  run-sync-one.ts  seed-ci-test-user.ts  setup-production.sh  sweep-priorities.ts  test-onboard-flow.mjs  test-onboard-full-no-profile.mjs  test-onboard-no-profile.mjs
src/: middleware.ts
supabase/: config.toml
(+579 files in other folders)
