[package]
name = "mashi-helper"
version = "0.1.0"
description = "Mashi Activity Watcher — macOS menubar helper"
authors = ["Mashi"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "mashi_helper_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-store = "2"
tauri-plugin-autostart = "2"
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "gzip"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
once_cell = "1"
log = "0.4"
env_logger = "0.11"
thiserror = "1"

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
